--- a/UI/index.html
+++ b/UI/index.html
@@ -8,16 +8,18 @@
   <link rel="stylesheet" href="static/chessboard.min.css">
   <script src="static/jquery.min.js"></script>
   <script src="static/chessboard.min.js"></script>
+  <script src="static/chess.js"></script>
   <style>
-    #board {
+    #myBoard {
       margin: 2em auto;
+      width: 600px;
     }
   </style>
 
 </head>
 
 <body>
-  <div id="board" style="width: 600px"></div>
+  <div id="myBoard"></div>
   <script src="index.js"></script>
 </body>
 
