--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>AWESOME CHESS</title>
 
   <link rel="stylesheet" href="static/chessboard.min.css">
@@ -232,6 +233,102 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+    }
+
+    /* King in check highlight */
+    .check-highlight {
+      box-shadow: inset 0 0 0 4px rgba(255, 0, 0, 0.8), 0 0 20px rgba(255, 0, 0, 0.6) !important;
+      background: radial-gradient(ellipse at center, rgba(255, 0, 0, 0.3) 0%, rgba(255, 0, 0, 0.1) 100%) !important;
+      animation: pulse-check 1s ease-in-out infinite;
+    }
+
+    @keyframes pulse-check {
+      0%, 100% {
+        box-shadow: inset 0 0 0 4px rgba(255, 0, 0, 0.8), 0 0 20px rgba(255, 0, 0, 0.6);
+      }
+      50% {
+        box-shadow: inset 0 0 0 4px rgba(255, 0, 0, 1), 0 0 30px rgba(255, 0, 0, 0.8);
+      }
+    }
+
+    /* Mobile responsive styles */
+    @media (max-width: 768px) {
+      html, body {
+        overflow-y: auto;
+        height: auto;
+      }
+
+      .container {
+        flex-direction: column;
+        height: auto;
+        padding: 10px;
+        gap: 15px;
+      }
+
+      .left-panel {
+        width: 100%;
+        gap: 10px;
+      }
+
+      #myBoard {
+        width: 100% !important;
+        max-width: 400px;
+        margin: 0 auto;
+      }
+
+      .right-panel {
+        width: 100%;
+        max-width: 400px;
+        margin: 0 auto;
+      }
+
+      .title h1 {
+        font-size: 22px;
+      }
+
+      .panel {
+        padding: 15px;
+      }
+
+      button {
+        padding: 10px 16px;
+        font-size: 13px;
+      }
+
+      #move-history {
+        max-height: 150px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .container {
+        padding: 5px;
+      }
+
+      #myBoard {
+        max-width: 100%;
+      }
+
+      .title h1 {
+        font-size: 18px;
+      }
+
+      .panel h3 {
+        font-size: 14px;
+      }
+
+      #status {
+        font-size: 14px;
+      }
+
+      .panel {
+        padding: 12px;
+      }
+
+      button {
+        padding: 8px 12px;
+        font-size: 12px;
+      }
     }
   </style>
 
